ingress/nginx-hello-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-hello
  labels:
    name: nginx-hello
