ingress/nginx-hello-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: nginx-hello
spec:
  rules:
    - host: hello-world.info
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-hello-service
                port: 
                  number: 32769
